--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "author": "Sofia Weiss & Annika Kubaj",
     "dependencies": {
         "gatsby": "^3.13.1",
+        "gatsby-plugin-google-fonts": "^1.0.1",
         "gatsby-plugin-image": "^1.13.0",
         "gatsby-plugin-manifest": "^3.13.0",
         "gatsby-plugin-offline": "^4.13.0",
