--- a/package.json
+++ b/package.json
@@ -6,12 +6,13 @@
     "author": "Sofia Weiss & Annika Kubaj",
     "dependencies": {
         "gatsby": "^3.13.1",
-        "gatsby-plugin-google-fonts": "^1.0.1",
+        "gatsby-plugin-fonts-com": "^1.3.2",
         "gatsby-plugin-image": "^1.13.0",
         "gatsby-plugin-manifest": "^3.13.0",
         "gatsby-plugin-offline": "^4.13.0",
         "gatsby-plugin-react-helmet": "^4.13.0",
         "gatsby-plugin-sharp": "^3.13.0",
+        "gatsby-plugin-web-font-loader": "^1.0.4",
         "gatsby-source-filesystem": "^3.13.0",
         "gatsby-transformer-sharp": "^3.13.0",
         "prop-types": "^15.7.2",
